[package]
name = "picot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-actix-native-tls"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
